--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             </li>
           </ul>
         </div>
-       <button class=" button"><a href="https://docs.google.com/document/d/1Q72nbwgbET1PWuMpG8k9JZM6VjPPKquQiambmUhedoo/edit?usp=sharing">Download my Resume</a></button> 
+	<div class="bttn">
+  <a href="https://docs.google.com/document/d/1Q72nbwgbET1PWuMpG8k9JZM6VjPPKquQiambmUhedoo/edit?usp=sharing">Download my Resume</a></div>
         <div id="down-arrow">
           <span><a href="#about"><i class="fa fa-chevron-down" aria-hidden="true"></i></a></span>
         </div>
@@ -68,7 +69,7 @@
           <div class="content-body">
             <p>Hey there! I'm Sakshi, a 19-year-old college senior currently studying for a B.Tech in Computer Science. My passions are technology and writing, and when I'm not coding , I'm singing or trying to get a song out of my head (unsuccessfully.) I love to solve problems, whether it’s finding the most elegant way to write a line of code or figuring out which word fits best into a blog, I love the challenge of finding a way and discovering solutions. Maybe that’s why I love writing and the satisfaction that comes from finding just the right word. As long as there’s a problem to solve or a challenge to puzzle over, it’s bound to be something I love! Apart from this I love cooking/baking! 
             </p>
-            <p>Wondering if I might be a good fit for your company? Check out my <a href="https://www.linkedin.com/in/sakshigupta06/">[LinkedIn profile]!</a>
+            <p>Wondering if I might be a good fit for your company? Check out my <a href="https://www.linkedin.com/in/sakshigupta06/">LinkedIn profile</a>
               This site is a collection of my work, interests, and writings; if any of those things intrigue you, don't hesitate to reach out.
               </p>
               <u><p>Contact Me:</p></u>
