Updating index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sakshi Gupta | Data Analyst</title>
+    <title>Sakshi Gupta | Associate Software Engineer</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Carter One:200,300,400,500,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -145,7 +145,7 @@
                 <h3>Galgotias University, Greater Noida <span class="job-title">2017-2021</span></h3>
               </div>
               <div class="card-content">
-                <p>I am a final year student pursuing B.tech Computer Science and Engineering.</p>
+                <p>I have pursued B.tech in Computer Science and Engineering.</p>
                 <p>CGPA: 9.0</p>
               </div>
             </div>
